students/IgnatkevichKirill/task_02/src/k8s/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: app-service
  namespace: as-64-220042-v09
spec:
  selector:
    app: app
  ports:
    - protocol: TCP
      port: 8071
      targetPort: 8071
  type: ClusterIP
